--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0",
     "vuetify": "latest",
-    "vuex": "^2.2.1"
+    "vuex": "^2.2.1",
+    "assert": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
